--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "pg": "^6.1.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^2.0.0-rc1",
+    "sequelize-cli": "^2.4.0",
     "serve-favicon": "~2.3.0"
   }
 }
